--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,3 @@
-import(Hmisc)
-import(lattice)
-import(latticeExtra)
-# Add to below: npsurv
-importFrom(rms, survplot)
-importFrom(survival, survfit)
-importFrom(Formula, Formula, model.part)
-
 export(Merge)
 export(accrualReport)
 export(dNeedle)
@@ -14,9 +6,20 @@ export(eReport)
 export(endPlot)
 export(exReport)
 export(getgreportOption)
+export(nriskReport)
 export(putFig)
 export(sampleFrac)
 export(setgreportOption)
 export(startPlot)
 export(survReport)
 export(upFirst)
+import(Hmisc)
+import(data.table)
+import(lattice)
+import(latticeExtra)
+importFrom(Formula,Formula)
+importFrom(Formula,model.part)
+importFrom(rms,npsurv)
+importFrom(rms,survplot)
+importFrom(survival,Surv)
+importFrom(survival,survfit)
