--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,22 @@
 Package: greport
-Version: 0.5-2
-Date: 2014-11-21
+Version: 0.5-3
+Date: 2015-04-20
 Title: Graphical Reporting for Clinical Trials
 Author: Frank E Harrell Jr <f.harrell@vanderbilt.edu>
 Maintainer: Frank E Harrell Jr <f.harrell@vanderbilt.edu>
-Depends: Hmisc (>= 3.14-2), data.table
-Imports: rms (>= 4.1-3), lattice, latticeExtra, Formula, survival
-Description: The greport package contains many functions useful for
+Depends: Hmisc (>= 3.16-0), data.table
+Imports: rms (>= 4.3-1), lattice, latticeExtra, ggplot2, Formula,
+        survival
+Description: Contains many functions useful for
     monitoring and reporting the results of clinical trials and other
     experiments in which treatments are compared.  LaTeX is
     used to typeset the resulting reports, recommended to be in the
-    context of knitr. The Hmisc and lattice packages are used by greport
-    for high-level graphics.
+    context of 'knitr'. The 'Hmisc', 'ggplot2', and 'lattice' packages are used
+		by 'greport' for high-level graphics.
 License: GPL (>= 2)
 URL: http://biostat.mc.vanderbilt.edu/Greport,
         https://github.com/harrelfe/greport
-Packaged: 2014-11-21 17:57:23 UTC; harrelfe
 NeedsCompilation: no
+Packaged: 2015-05-01 12:04:52 UTC; harrelfe
 Repository: CRAN
-Date/Publication: 2014-11-22 00:36:39
+Date/Publication: 2015-05-01 15:57:17
